--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       <h1 class="project-name">Compact Lava Generator</h1>
       <h2 class="project-tagline">A mod for Minecraft</h2>
       <a href="https://github.com/panda2134/CompactLavaGenerator" class="btn">View on GitHub</a>
-      <a href="https://github.com/panda2134/CompactLavaGenerator/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/panda2134/CompactLavaGenerator/tarball/master" class="btn">Download .tar.gz</a>
+      <a href="https://github.com/panda2134/CompactLavaGenerator/tarball/master" class="btn">Curseforge Download</a>
+      <a href="https://github.com/panda2134/CompactLavaGenerator/zipball/master" class="btn">Download Source</a>
     </section>
 
     <section class="main-content">
@@ -23,7 +23,7 @@
 <a id="compactlavagenerator" class="anchor" href="#compactlavagenerator" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>CompactLavaGenerator</h1>
 
 <p>
-  <iframe allowfullscreen="allowfullscreen" src="http://www.youtube.com/embed/JvFESac2zZ8?wmode=transparent" height="358" width="638">
+  <iframe allowfullscreen="allowfullscreen" src="http://www.youtube.com/embed/JvFESac2zZ8?wmode=transparent" height="358" width="638"></iframe>
 Lava,as a type of power,is used in Minecraft for years.However,you found that most of the energy of it is wasted.You have been thinking day and night for a way to extract all of the energy inside it.
 That's it.
 Compact Lava Generators use energy crystals which are very expensive to extract the energy inside lava.You found that lava is used effciently.Even a bit of lava can produce tons of energy. The generator is worth its price.</p>
