--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <h1 class="project-name">Compact Lava Generator</h1>
       <h2 class="project-tagline">A mod for Minecraft</h2>
       <a href="https://github.com/panda2134/CompactLavaGenerator" class="btn">View on GitHub</a>
-      <a href="https://github.com/panda2134/CompactLavaGenerator/tarball/master" class="btn">Curseforge Download</a>
+      <a href="http://minecraft.curseforge.com/projects/compact-lava-generator/files" class="btn">Curseforge Download</a>
       <a href="https://github.com/panda2134/CompactLavaGenerator/zipball/master" class="btn">Download Source</a>
     </section>
 
