--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
   <span>
   <iframe allowfullscreen="allowfullscreen" src="http://www.youtube.com/embed/JvFESac2zZ8?wmode=transparent" height="358" width="638"></iframe>
   </span>
-Lava,as a type of power,is used in Minecraft for years.However,you found that most of the energy of it is wasted.You have been thinking day and night for a way to extract all of the energy inside it.
-That's it.
-Compact Lava Generators use energy crystals which are very expensive to extract the energy inside lava.You found that lava is used effciently.Even a bit of lava can produce tons of energy. The generator is worth its price.</p>
+<p>Lava,as a type of power,is used in Minecraft for years.However,you found that most of the energy of it is wasted.You have been thinking day and night for a way to extract all of the energy inside it.</p>
+<p>That's it.</p>
+<p>Compact Lava Generators use energy crystals which are very expensive to extract the energy inside lava.You found that lava is used effciently.Even a bit of lava can produce tons of energy. The generator is worth its price.</p></p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/panda2134/CompactLavaGenerator">Compactlavagenerator</a> is maintained by <a href="https://github.com/panda2134">panda2134</a>.</span>
