--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <section class="page-header">
       <h1 class="project-name">Compact Lava Generator</h1>
       <h2 class="project-tagline">A mod for Minecraft</h2>
+      
       <a href="https://github.com/panda2134/CompactLavaGenerator" class="btn">View on GitHub</a>
       <a href="http://minecraft.curseforge.com/projects/compact-lava-generator/files" class="btn">Curseforge Download</a>
       <a href="https://github.com/panda2134/CompactLavaGenerator/zipball/master" class="btn">Download Source</a>
@@ -24,7 +25,7 @@
 
 <p>
   <span>
-  <iframe allowfullscreen="allowfullscreen" src="http://www.youtube.com/embed/JvFESac2zZ8?wmode=transparent" height="358" width="638"></iframe>
+  <iframe allowfullscreen="allowfullscreen" src="http://www.youtube.com/embed/JvFESac2zZ8?wmode=transparent"></iframe>
   </span>
 <p>Lava,as a type of power,is used in Minecraft for years.However,you found that most of the energy of it is wasted.You have been thinking day and night for a way to extract all of the energy inside it.</p>
 <p>That's it.</p>
