--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       
       <a href="https://github.com/panda2134/CompactLavaGenerator" class="btn">View on GitHub</a>
       <a href="http://minecraft.curseforge.com/projects/compact-lava-generator/files" class="btn">Curseforge Download</a>
-      <a href="https://github.com/panda2134/CompactLavaGenerator/zipball/master" class="btn">Download Source</a>
+      <a href="https://drone.io/github.com/panda2134/CompactLavaGenerator/files" class="btn">Latest Build</a>
     </section>
 
     <section class="main-content">
